@@ -6,4 +6,7 @@ spl_autoload_register();
 new ThisClassDoesNotExistEverFoo();
 ?>
 --EXPECTF--
-Fatal error: spl_autoload(): Class ThisClassDoesNotExistEverFoo could not be loaded in %s on line 3
+Fatal error: Uncaught Error: Class 'ThisClassDoesNotExistEverFoo' not found in %s:%d
+Stack trace:
+#0 {main}
+  thrown in %s on line 3
